--- a/NativeScriptJohnWayne/tsconfig.json
+++ b/NativeScriptJohnWayne/tsconfig.json
@@ -8,6 +8,7 @@
       "noEmitHelpers": true,
       "noEmitOnError": true,
       "skipLibCheck": true,
+      "baseUrl": "./src",
       "lib": [
         "es2018", "es2017", "dom", "es6"
       ],
